--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,10 +4,10 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView  
+<ListView
+    android:id="@+id/task_lists"
     android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="Hello World, GToDoActivity"
+    android:layout_height="fill_parent"
     />
 </LinearLayout>
 
